# aws-workload-credentials-provider

./: .crux_template.md  Cargo.toml  Dockerfile  README.md  package.json  test-local.ps1  test-local.sh
.github/workflows/: benchmarks.yml  docker.yml  integration-tests.yml  release.yml  rust.yml  staging.yml
aws_certificatemanager_provider/: Cargo.toml
aws_certificatemanager_provider/src/: acm_manager.rs  certificate_task.rs  error.rs  lib.rs  refresh_executor.rs  run.rs  scheduler.rs  traits.rs  utils.rs
aws_certificatemanager_provider/src/certificate_file_store/: certificate_store.rs  error.rs  mod.rs
aws_secretsmanager_agent/: Cargo.toml
aws_secretsmanager_agent/src/: cache_manager.rs  config.rs  constants.rs  main.rs  prefetch.rs  server.rs  utils.rs
aws_secretsmanager_agent/tests/resources/configs/: config_file_full_with_prefetch.toml  config_file_max_roles_2.toml  config_file_prefetch_both.toml  config_file_prefetch_empty.toml  config_file_prefetch_functional.toml  config_file_prefetch_inline.toml  config_file_prefetch_jitter.toml  config_file_prefetch_secrets.toml  config_file_prefetch_tags.toml
aws_secretsmanager_caching/: Cargo.toml  README.md
aws_secretsmanager_caching/benches/: benchmark.rs
aws_secretsmanager_caching/src/: lib.rs  utils.rs
aws_secretsmanager_provider/: Cargo.toml
aws_secretsmanager_provider/examples/example-lambda-extension/: secrets-manager-provider-extension.sh
aws_secretsmanager_provider/src/: cache_manager.rs  constants.rs  credentials_file_provider.rs  lib.rs  parse.rs  prefetch.rs  server.rs  utils.rs
aws_workload_credentials_provider/: Cargo.toml
aws_workload_credentials_provider/src/: cli.rs  main.rs
aws_workload_credentials_provider_common/: Cargo.toml
aws_workload_credentials_provider_common/configuration/: acmReloadConfig.ps1  aws-workload-credentials-provider-acm-nocaps.service  aws-workload-credentials-provider-acm.service  aws-workload-credentials-provider-sm.service  aws-workload-credentials-provider-token  aws-workload-credentials-provider-token.ps1  aws-workload-credentials-provider-token.service  common.ps1  common.sh  install  install.ps1  setup-permissions.sh  uninstall  uninstall.ps1
aws_workload_credentials_provider_common/src/: constants.rs  filesystem.rs  fs_permissions.rs  lib.rs  logging.rs  win_service.rs
aws_workload_credentials_provider_common/src/config/: error.rs  error_messages.rs  field_validators.rs  mod.rs  sudoers.rs  systemd.rs  types.rs  validator.rs
integration-tests/: Cargo.toml
integration-tests/tests/: cache_behavior.rs  certificate_provider.rs  common.rs  configuration.rs  file_credentials.rs  prefetch.rs  role_chaining.rs  secret_retrieval.rs  security.rs  version_management.rs
