[package]
name = "aws_secretsmanager_provider"
version = "3.0.0"
edition = "2021"
license = "Apache-2.0"
description = "The AWS Secrets Manager Provider is a local HTTP service that you can install and use in your compute environments to read secrets from Secrets Manager and cache them in memory."
homepage = "https://github.com/aws/aws-workload-credentials-provider"
repository = "https://github.com/aws/aws-workload-credentials-provider"
readme = "../README.md"

[features]
fips = ["aws_secretsmanager_caching/fips"]

[lib]
name = "aws_secretsmanager_provider"
path = "src/lib.rs"

[dependencies]
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"

serde = "1"
serde_json = "1"
serde_derive = "1"

aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-smithy-runtime-api = "1"
aws-sdk-sts = "1"
log = "0.4.29"
log4rs = { version = "1.2.0", features = ["gzip"] }
tokio-util = "0.7.18"
url = "2"
aws_secretsmanager_caching = { version = "2.1.0", path = "../aws_secretsmanager_caching" }
aws_workload_credentials_provider_common = { version = "3.0.0", path = "../aws_workload_credentials_provider_common" }
regex = "1"
rand = "0.10"

# For unit tests
[dev-dependencies]
hyper = { version = "1", features = ["http1", "server", "client"] }
aws-smithy-runtime = { version = "1", features = ["test-util"] }
aws_secretsmanager_caching = { version = "2.1.0", path = "../aws_secretsmanager_caching", features = ["test-util"] }
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "net", "macros"] }
http = "0.2.9"
aws-smithy-types = "1"
