[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "test-util", "time", "process", "io-util"] }
reqwest = "0.13"
serde_json = "1"
aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-sts = "1"
url = "2"
derive_builder = "0.20"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
aws_certificatemanager_provider = { path = "../aws_certificatemanager_provider" }

